<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!--Wrapped the image with a card to have corner radius-->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/momentImageCard"
                    style="@style/Widget.IOSched.Feed.Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/feed_moment_height">

                        <ImageView
                            android:id="@+id/momentImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:contentDescription="@null"
                            android:scaleType="fitCenter"
                            android:src="@drawable/devfest_gdg" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#55000000" />
                    </FrameLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/gdg_what"
                    style="@style/Widget.IOSched.Feed.Card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/momentImageCard">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/whatGdg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/feed_announcement_min_height">

                        <ImageView
                            android:id="@+id/image1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:contentDescription="@null"
                            android:scaleType="centerCrop"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent="@dimen/feed_announcement_image_width_percent"
                            tools:visibility="gone" />

                        <TextView
                            android:id="@+id/title1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_normal"
                            android:text="@string/what_is_gdg"
                            android:textAlignment="viewStart"
                            android:textAppearance="?textAppearanceListItem"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image1"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="What is a GDG?" />

                        <TextView
                            android:id="@+id/message1"
                            style="@style/Widget.IOSched.MultilineBody"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_normal"
                            android:layout_marginTop="@dimen/margin_normal_top"
                            android:layout_marginEnd="@dimen/margin_normal"
                            android:layout_marginBottom="@dimen/margin_normal"
                            android:autoLink="web"
                            android:drawableEnd="@drawable/ic_linkout"
                            android:drawablePadding="10dp"
                            android:text="@string/gdg_info"
                            android:textAlignment="viewStart"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image1"
                            app:layout_constraintTop_toBottomOf="@+id/title1"
                            tools:text="@string/gdg_info" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/whatDevFest"
                    style="@style/Widget.IOSched.Feed.Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gdg_what">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/feed_announcement_min_height">

                        <ImageView
                            android:id="@+id/image2"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:contentDescription="@null"
                            android:scaleType="centerCrop"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent="@dimen/feed_announcement_image_width_percent"
                            tools:visibility="gone" />

                        <TextView
                            android:id="@+id/title2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_normal"
                            android:text="@string/what_is_devfest"
                            android:textAlignment="viewStart"
                            android:textAppearance="?textAppearanceListItem"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image2"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/what_is_devfest" />

                        <TextView
                            android:id="@+id/message"
                            style="@style/Widget.IOSched.MultilineBody"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_normal"
                            android:layout_marginTop="@dimen/margin_normal_top"
                            android:layout_marginEnd="@dimen/margin_normal"
                            android:layout_marginBottom="@dimen/margin_normal"
                            android:autoLink="web"
                            android:drawableEnd="@drawable/ic_linkout"
                            android:drawablePadding="10dp"
                            android:text="@string/devfest_info"
                            android:textAlignment="viewStart"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image2"
                            app:layout_constraintTop_toBottomOf="@+id/title2"
                            tools:text="@string/devfest_info" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.IOSched.Feed.Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/whatDevFest">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/feed_announcement_min_height">

                        <ImageView
                            android:id="@+id/image3"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:contentDescription="@null"
                            android:scaleType="centerCrop"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent="@dimen/feed_announcement_image_width_percent"
                            tools:visibility="gone" />

                        <TextView
                            android:id="@+id/title3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_normal"
                            android:text="@string/about_devfest_ibadan"
                            android:textAlignment="viewStart"
                            android:textAppearance="?textAppearanceListItem"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image3"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/about_devfest_ibadan" />

                        <TextView
                            android:id="@+id/message3"
                            style="@style/Widget.IOSched.MultilineBody"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_normal"
                            android:layout_marginTop="@dimen/margin_normal_top"
                            android:layout_marginEnd="@dimen/margin_normal"
                            android:layout_marginBottom="@dimen/margin_normal"
                            android:autoLink="web"
                            android:text="@string/devfestib_info"
                            android:textAlignment="viewStart"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image3"
                            app:layout_constraintTop_toBottomOf="@+id/title3"
                            tools:text="@string/devfestib_info" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/ic_out_24dp"
            app:iconTint="@color/white" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>